--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4+1
+version: 1.0.5+1
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -53,6 +53,7 @@ dependencies:
   external_path: ^1.0.3
   community_charts_flutter: ^1.0.1
   flutter_colorpicker: ^1.0.3
+  universal_html: ^2.2.4
   directory_path:
     path: plugins/directory_path
 
